[package]
name = "hyper-microservice"
version = "0.1.0"
authors = ["Bill Barekas <bbarekas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
hyper = "0.12"
lazy_static = "1.0"
regex = "1.0"
slab = "0.4"

[[bin]]
name = "chapter2"
path = "src/chapter2.rs"

