[package]
name = "hyper-microservice"
version = "0.1.0"
authors = ["Bill Barekas <bbarekas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10"
base64-serde = "0.3"
clap = "2.32"
dotenv = "0.13"
failure = "0.1"
futures = "0.1"
hyper = "0.12"
lazy_static = "1.0"
log = "0.4"
pretty_env_logger = "0.2"
queryst = "2.0"
rand = "0.5"
regex = "1.0"
slab = "0.4"
serde = "1.0"
serde_cbor = "0.8"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"

[[bin]]
name = "chapter2"
path = "src/chapter2.rs"

[[bin]]
name = "chapter3"
path = "src/chapter3.rs"

[[bin]]
name = "chapter4"
path = "src/chapter4.rs"

